tests/frontend/fail/timed_calldata.act
constructor of Fail
interface constructor(uint y)

creates

  uint x := y

ensures

  post(x) >= pre(y)
